--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
                 <span id="typed-strings">
                   <span>I'm Siddhi Parte</span>
                   <span>A Computer Engineer</span>
-                  <span>Working as a Data Scientist</span>
+                  <span>Saumay is a frog</span>
                 </span>
                 <span id="typed"></span>
               </h1>
